--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,85 @@
+*.DS_Store
 *.class
+*.tasty
 *.log
+*.swp
+*~
+tags
+
+# sbt specific
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+project/local-plugins.sbt
+.history
+.ensime
+.ensime_cache/
+.sbt-scripted/
+local.sbt
+
+# npm
+node_modules
+
+# VS Code
+.vscode/
+# Metals
+.bloop/
+.metals/
+metals.sbt
+
+# idea
+.idea
+.idea_modules
+/.worksheet/
+
+# scala-cli
+.scala-build
+
+# Partest
+dotty.jar
+dotty-lib.jar
+tests/partest-generated/
+tests/locks/
+/test-classes/
+
+# Benchmarks
+bench/tests-generated
+
+# Ignore output files but keep the directory
+out/
+build/
+!out/.keep
+testlogs/
+
+# Ignore build-file
+.packages
+/.cache-main
+/.cache-tests
+
+# Put local stuff here
+local/
+compiler/test/debug/Gen.jar
+
+compiler/before-pickling.txt
+compiler/after-pickling.txt
+bench/compile.txt
+
+# Vulpix output files
+*.check.out
+!/dist/bin/
+
+# semanticdb test output files
+*.expect.scala.out
+*.expect.out
+
+# Bloop
+.bsp
+
+# Coursier
+cs
+
+# Coursier test product
+compiler/test-coursier/run/*.jar
