--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,5 +173,5 @@ jobs:
       - name: Submit Dependencies
         uses: scalacenter/sbt-dependency-submission@v2
         with:
-          modules-ignore: rootjs_3 rootjvm_3 rootnative_3 surreal-tests_3
+          modules-ignore: rootjs_3 rootjvm_3 rootnative_3 absurd-tests_3
           configs-ignore: test scala-tool scala-doc-tool test-internal
